<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/imagenPerfil"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/label_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bienvenido" />

    <TextView
        android:id="@+id/label_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/miNombre" />
</LinearLayout>