<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".PasswordActivity">

    <TextView
        android:id="@+id/label_instruccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/instruccionCambiar"
        android:textColor="@color/colorFont" />

    <TextView
        android:id="@+id/label_nueva_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/contraseñaNueva"
        android:textColor="@color/colorFont" />

    <EditText
        android:id="@+id/input_nueva_contraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/label_confirmar_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/confContraseñaNueva"
        android:textColor="@color/colorFont" />

    <EditText
        android:id="@+id/input_confirmar_contraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/cardview_dark_background" />

    <Button
        android:id="@+id/button_cambiar_contraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorButton"
        android:onClick="cambiarClave"
        android:text="@string/btn_Cambiar"
        android:textColor="@color/design_default_color_background" />

</LinearLayout>