<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wraper"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/wraper_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_tip"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:contentDescription="@string/imagenTip"
            app:srcCompat="@drawable/img_tip1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wraper_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wraper_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contenidoTip" />
    </LinearLayout>
</LinearLayout>